src/test/ui/hr-subtype/hr-subtype.bound_a_b_vs_bound_a.stderr
error[E0308]: mismatched types
  --> $DIR/hr-subtype.rs:39:26
   |
LL |               gimme::<$t1>(None::<$t2>);
   |                            ^^^^^^^^^^^ expected concrete lifetime, found bound lifetime parameter 'a
...
LL | / check! { bound_a_b_vs_bound_a: (for<'a,'b> fn(&'a u32, &'b u32),
LL | |                                 for<'a>    fn(&'a u32, &'a u32)) }
   | |__________________________________________________________________- in this macro invocation
   |
   = note: expected type `std::option::Option<for<'a, 'b> fn(&'a u32, &'b u32)>`
              found type `std::option::Option<for<'a> fn(&'a u32, &'a u32)>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
